<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UCRRunner </string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_map_pre_start">MapPreStart</string>
    <string name="title_activity_base_map">BaseMapActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Create Account strings -->
    <string name="create_account_edittext">Create Account</string>
    <string name="username_edittext">Username</string>
    <string name="nickname_edittext">Nickname</string>
    <string name="password_edittext">Password</string>
    <string name="height_edittext">Height (i.e. 5\'10\")</string>
    <string name="weight_edittext">Weight (lbs)</string>
    <string name="age_edittext">Age</string>
    <string name="male_edittext">Male</string>
    <string name="female_edittext">Female</string>
    <string name="email_edittext">Email</string>
    <string name="birthday_edittext">Birthday</string>
    <string name="createaccount_finish_button">Join Now</string>
    <string name="height_alert_dialog_title">Height</string>
    <string name="alert_dialog_ok">Ok</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="age_alert_dialog_title">age</string>
    <string name="weight_alert_dialog_title">weight</string>

    <!-- Prev Route strings -->

    <string name="rerun_route_dialog_title">Rerun?</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Message Dialog strings -->
    <string name="message_dialog_title">New Message:</string>
    <string name="add_friend_dialog_title">Add Friend:</string>
    <string name="comment_dialog_title">Write Comment:</string>
    <string name="title_activity_post_run">PostRunActivity</string>
    <string name="title_activity_profile_nav_drawer">UCRRunner</string>
    <string name="title_section_profile">Home</string>
    <string name="title_section_friends">Friends</string>
    <string name="title_section_mailbox">Messaging</string>
    <string name="title_section_newsfeed">NewsFeed</string>
    <string name="title_section_prevroutes">Previous Routes</string>
    <string name="title_section_settings">Settings</string>
    <string name="title_section_startrun">Start Run</string>
    <string name="title_section_logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>

</resources>
